# two-tower-recipe-recommender-system

./: .env.example  .gitignore  INSTALL_AND_USAGE.md  Makefile  README.md  pyproject.toml
.github/actions/setup/: action.yaml
.github/workflows/: ml_pipelines.yaml
data/: reviews.csv
notebooks/: 1_fp_computing_features.ipynb  2_tp_training_retrieval_model.ipynb  3_tp_training_ranking_model.ipynb  4_ip_computing_item_embeddings.ipynb  5_ip_creating_deployments.ipynb  6_scheduling_materialization_jobs.ipynb  Two_Towers_Models.ipynb  Two_Towers_Preprocessing.ipynb  Two_Towers_Recipe_Recommendation.ipynb  data_preprocessing.ipynb  two_tower_model.ipynb
recsys/: __init__.py  config.py
recsys/features/: __init__.py  customers.py  embeddings.py  transactions.py
recsys/hopsworks_integration/: __init__.py  constants.py  feature_store.py  ranking_serving.py  two_tower_serving.py
recsys/inference/: __init__.py  query_transformer.py  ranking_transformer.py
recsys/raw_data_sources/: h_and_m.py
recsys/training/: __init__.py  ranking.py  two_tower.py
recsys/ui/: feature_group_updater.py  interaction_tracker.py  recommenders.py  utils.py
tools/: clean_hopsworks_resources.py  inference_and_ui.py
